fix: weird rendering issue on mobile viewports
closes: https://github.com/realaravinth/libmedium/issues/36

--- a/templates/main.css
+++ b/templates/main.css
@@ -7,7 +7,6 @@
 body {
   width: 100%;
   display: flex;
-  flex-direction: column;
 }
 
 main {
